--- a/wp-content/themes/egg/assets/less/main.less
+++ b/wp-content/themes/egg/assets/less/main.less
@@ -23,6 +23,7 @@
 @import "layouts/pages/_services";   // Services page styling
 @import "layouts/pages/_contact";    // Contact us page styling 
 @import "layouts/pages/_careers";    // Careers page styling 
+@import "layouts/pages/_stores";     // Our stores page styling 
 
 // header+footer styles
 @import "navmenu.less";
