--- a/wp-content/themes/egg/assets/less/navmenu.less
+++ b/wp-content/themes/egg/assets/less/navmenu.less
@@ -53,6 +53,10 @@
 				a{
 				background: none;
 				color:#f8b03a;
+					&:hover {
+						background: none;
+						color:#f8b03a;
+					}
 				}
 			}
 			&:focus{background: none;color:#f8b03a;}
