--- a/wp-content/themes/egg/assets/css/main.css
+++ b/wp-content/themes/egg/assets/css/main.css
@@ -7764,13 +7764,14 @@ figure.alignnone {
   position: relative;
 }
 .navbar-fixed-top {
-  position: absolute;
-}
-.main {
   position: relative;
-  top: 64px;
-  padding-bottom: 64px;
 }
+/*.main{
+   position: relative;
+   top: 64px;
+   padding-bottom: 64px;
+}
+*/
 .navbar-default {
   background-color: rgba(42, 28, 0, 0.9);
   border: none;
@@ -7924,9 +7925,13 @@ figure.alignnone {
   margin-right: 0;
 }
 @media (min-width: 768px) {
-  .main {
-    position: initial;
-    padding-bottom: 0;
+  /*.main{
+   position: initial;
+   top: 0px;
+}
+*/
+  .navbar-fixed-top {
+    position: absolute;
   }
   .navbar-default .nav-container {
     float: none;
@@ -7957,6 +7962,11 @@ figure.alignnone {
   }
 }
 @media (min-width: 992px) {
+  /*.main{
+   position: initial;
+   top: 0px;
+}
+*/
   .navbar-fixed-top {
     position: fixed;
   }
@@ -8005,6 +8015,11 @@ figure.alignnone {
   }
 }
 @media (min-width: 1200px) {
+  /*.main{
+   position: initial;
+   top: 0px;
+}
+*/
   .navbar-default .nav-social {
     position: absolute;
     right: 15px;
