--- a/wp-content/themes/egg/assets/less/_global.less
+++ b/wp-content/themes/egg/assets/less/_global.less
@@ -8,7 +8,7 @@ body{
 	font-family: 'Lato', sans-serif;
 
 	&.zh-hant{
-		font-family: 'Heiti TC Medium', MHeiHK, '微軟正黑體', 'Microsoft JhengHei', SimHei, sans-serif;
+		font-family: 'Heiti TC Medium', MHeiHK, '微軟正黑體', 'Microsoft JhengHei', SimHei, sans-serif!important;
 	}
 }
 
@@ -59,7 +59,8 @@ body{
 		  margin-bottom: 0;
 		  display: inline-block;
 		  font-size: 23px;
-		  font-family: 'Lato Black', sans-serif; 
+		  /*font-family: 'Lato', sans-serif;*/
+		  font-weight: 900;
 		}
 	}
 }
