--- a/wp-content/themes/egg/assets/less/layouts/pages/_services.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_services.less
@@ -10,10 +10,10 @@
 	  background-color: #e6e4e0;
 	  margin:0 0 50px 0;
 	  padding: 15px 0px;
-	  	h3{  margin-top: 10px;margin-bottom: 15px;font-weight: 700;}
+	  	h3{  margin-top: 10px;margin-bottom: 15px;font-weight: 700;letter-spacing: 1px;}
 	  	.right-content-container{ padding-left:15px;padding-right:15px;}
 	  	.left-content-container img{width:100%;} 
-	  	ul{
+	  	ul,ol{
 	  		  padding-left: 18px;
 	  	}
 
