--- a/wp-content/themes/egg/assets/less/layouts/pages/_contact.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_contact.less
@@ -17,12 +17,12 @@
 				margin-bottom: 11px;
 				color: rgb(102, 68, 0);
   				}
-  			a{
+  			a,span{
   				display: block;
 				  color: rgb(102, 68, 0);
 				  font-size: 16px;
 				  word-wrap: break-word;
-				  margin-bottom:20px;
+				 
   				} 
   		}
   	
@@ -42,6 +42,9 @@
 							text-align: left;
 							vertical-align: top;
 							display:inline-block;
+							  color: #666666;
+							  letter-spacing: 2px;
+							  font-size: 16px;
 							}
 						input, textarea {border:1px solid #999999;padding:5px;width:100%}
 						span.wpcf7-form-control-wrap{  width: 100%;display: inline-block;}
