--- a/wp-content/themes/egg/assets/less/layouts/pages/_contact.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_contact.less
@@ -10,19 +10,22 @@
   		padding-top: 30px;
   		padding-bottom: 50px;
   		text-align:center;
-  			i{
-  				border: 1px solid #664400;
-				padding: 20px;
-				width: 100%;
-				margin-bottom: 11px;
-				color: rgb(102, 68, 0);
-  				}
+  			
   			a{
   				display: block;
 				  color: rgb(102, 68, 0);
 				  font-size: 16px;
 				  word-wrap: break-word;
 				  margin-bottom:20px;
+					i{
+						border: 1px solid #664400;
+						padding: 20px;
+						width: 100%;
+						margin-bottom: 11px;
+						color: rgb(102, 68, 0);
+							
+						}
+					&:hover i{background-color:#fff;}
   				} 
   		}
   	
