--- a/wp-content/themes/egg/assets/less/layouts/pages/_stores.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_stores.less
@@ -73,7 +73,10 @@
 				  color: #fff;
 				  padding: 8px;
 				  text-transform: uppercase;
-					&:hover{text-decoration:none;}
+					&:hover{
+						text-decoration:none;
+						background-color: #664400; 
+						}
 				}
 				
 				.slick-prev {
