--- a/wp-content/themes/egg/assets/less/layouts/pages/_news.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_news.less
@@ -21,7 +21,7 @@
 						}
 					}
 				.right-content-container{
-					padding: 0px 20px;;
+					padding: 0px 20px 34px;
 						h4{ 
 							margin-top: 3px;
 							font-weight: 700;
@@ -62,7 +62,7 @@
 	.container{
 	  	.row{
 				.right-content-container{
-					padding: 20px 30px;
+					padding: 20px 30px 34px;
 					}
 			}
 	}
