--- a/wp-content/themes/egg/assets/less/layouts/pages/_stores.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_stores.less
@@ -59,7 +59,7 @@
 				.single-store {
 				  background-color: #fff;
 				  padding: 10px;
-				    min-height: 503px;		
+				  min-height: 420px;	
 					p.item-title {
 					  margin-bottom: 0;
 					}
@@ -146,6 +146,9 @@
 			.store-slider{
 				padding-left: 0px;
 				padding-right: 0px;
+				.single-store {
+				  min-height: 420px;
+				}
 				.slick-prev {
 				  left:-40px;
 				}
