--- a/wp-content/themes/egg/assets/less/layouts/pages/_careers.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_careers.less
@@ -18,7 +18,7 @@
  		margin-bottom: 30px;
   		margin-top: 20px; 
   			p{color:#666666;}
-  			h3{color:#000;  margin-top: 10px;text-transform: none;}
+  			h3{margin-top: 10px;text-transform: none;  font-size: 18px;  letter-spacing: 0;color:@gray-dark;margin-bottom: 20px;}
   		}
 }
 //===============================================================================
