--- a/wp-content/themes/egg/assets/less/_global.less
+++ b/wp-content/themes/egg/assets/less/_global.less
@@ -7,7 +7,7 @@
 body{
 	font-family: 'Lato', sans-serif;
 
-	&.zh-hant{
+	&.zh-hant,&.zh-hans{
 		font-family: 'Heiti TC Medium', MHeiHK, '微軟正黑體', 'Microsoft JhengHei', SimHei, sans-serif!important;
 	}
 }
@@ -72,6 +72,12 @@ body{
 #career-page .container,
 #contact-page .container,
 #default-page .container {  padding: 70px 15px;}
+
+.zh-hant,.zh-hans{
+	.page-head-container .page-title h2{
+		font-weight: bold;
+	}
+}
 
  
 //===============================================================================
