--- a/wp-content/themes/egg/assets/less/_global.less
+++ b/wp-content/themes/egg/assets/less/_global.less
@@ -22,6 +22,20 @@ body{
 	}
 }
 
+.left-content-container,
+.right-content-container,
+.content-container,
+.section-contents,
+.product-info,
+.news-content-container,
+.single-store,
+.career-post{
+	p,li{
+		letter-spacing: 1px;
+	}
+}
+
+
 .noPadding{
 	padding-left:0;
 	padding-right:0;
