--- a/wp-content/themes/egg/assets/less/navmenu.less
+++ b/wp-content/themes/egg/assets/less/navmenu.less
@@ -46,27 +46,27 @@
 			display: block;
 			float:none;
 			a{
-				color:#fff;
+				color:#fff!important;
 				letter-spacing: 1px;
 			}
 			&:hover {
 				a{
 				background: none;
-				color:#f8b03a;
+				color:#f8b03a!important;
 					&:hover {
 						background: none;
 						color:#f8b03a;
 					}
 				}
 			}
-			&:focus{background: none;color:#f8b03a;}
+			&:focus{background: none;color:#f8b03a!important;}
 		}
 		li.active a{
-			color:#f8b03a;
+			color:#f8b03a!important;
 			background: none;
 			&:hover {
 				background: none;
-				color:#f8b03a;
+				color:#f8b03a!important;
 			}
 		}
 		#menu-primary-navigation,#menu-primary-navigation-chinese-traditional,#menu-primary-navigation-chinese-simplified{
