--- a/wp-content/themes/egg/assets/less/layouts/pages/_careers.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_careers.less
@@ -5,7 +5,7 @@
 //===============================================================================
 #career-page{
 	text-align:center;
-	h3{color:#999999;text-transform: uppercase;  margin-bottom: 24px; margin-top: 24px;  font-weight: bold;  letter-spacing: 0;font-size: 18px;}
+	h3{color:#999999;text-transform: uppercase;  margin-bottom: 24px; margin-top: 24px;  font-weight: bold;  letter-spacing: 1px;font-size: 18px;}
  	p{color:#664400;font-size: 15px;letter-spacing: 1px;}
  	.career-content{
  		margin-bottom: 30px;
@@ -18,7 +18,7 @@
  		margin-bottom: 30px;
   		margin-top: 20px; 
   			p{color:#666666;}
-  			h3{margin-top: 10px;text-transform: none;  font-size: 18px;  letter-spacing: 0;color:@gray-dark;margin-bottom: 20px;}
+  			h3{margin-top: 10px;text-transform: none;  font-size: 18px;  letter-spacing: 1px;color:@gray-dark;margin-bottom: 20px;}
   		}
 }
 //===============================================================================
