--- a/wp-content/themes/egg/assets/less/main.less
+++ b/wp-content/themes/egg/assets/less/main.less
@@ -1,4 +1,4 @@
-// Bootstrap
+Ik// Bootstrap
 @import "_bootstrap";
 
 // Variable overrides and custom variables
@@ -30,6 +30,9 @@
 
 //Owl Carousel plugin
 @import "components/slick";
+
+//Fancy box plugin
+@import "components/jquery-fancybox"; 
 
 //Fonts  Lato
 @import url(http://fonts.googleapis.com/css?family=Lato);
