--- a/wp-content/themes/egg/assets/css/main.css
+++ b/wp-content/themes/egg/assets/css/main.css
@@ -7602,6 +7602,20 @@ figure.alignnone {
   padding: 5px;
   width: 100%;
 }
+#contact-page .contact-form .form-wrapper .form-group input[type=radio],
+#contact-page .contact-form .form-wrapper .comment-form p input[type=radio] {
+  width: inherit;
+}
+#contact-page .contact-form .form-wrapper .form-group span.wpcf7-list-item,
+#contact-page .contact-form .form-wrapper .comment-form p span.wpcf7-list-item {
+  margin-left: 0;
+  display: block;
+}
+#contact-page .contact-form .form-wrapper .form-group span.wpcf7-list-item .wpcf7-list-item-label,
+#contact-page .contact-form .form-wrapper .comment-form p span.wpcf7-list-item .wpcf7-list-item-label {
+  top: -3px;
+  position: relative;
+}
 #contact-page .contact-form .form-wrapper .form-group span.wpcf7-form-control-wrap,
 #contact-page .contact-form .form-wrapper .comment-form p span.wpcf7-form-control-wrap {
   width: 100%;
@@ -7640,6 +7654,20 @@ figure.alignnone {
   #contact-page .contact-form .form-wrapper .form-group span.wpcf7-form-control-wrap,
   #contact-page .contact-form .form-wrapper .comment-form p span.wpcf7-form-control-wrap {
     width: 80%;
+  }
+  #contact-page .contact-form .form-wrapper .form-group span.wpcf7-form-control-wrap.radio-574,
+  #contact-page .contact-form .form-wrapper .form-group span.wpcf7-form-control-wrap.radio-962,
+  #contact-page .contact-form .form-wrapper .form-group span.wpcf7-form-control-wrap.radio-557,
+  #contact-page .contact-form .form-wrapper .comment-form p span.wpcf7-form-control-wrap.radio-574,
+  #contact-page .contact-form .form-wrapper .comment-form p span.wpcf7-form-control-wrap.radio-962,
+  #contact-page .contact-form .form-wrapper .comment-form p span.wpcf7-form-control-wrap.radio-557 {
+    position: relative;
+    top: 5px;
+  }
+  #contact-page .contact-form .form-wrapper .form-group span.wpcf7-list-item,
+  #contact-page .contact-form .form-wrapper .comment-form p span.wpcf7-list-item {
+    margin-right: 20px;
+    display: inherit;
   }
 }
 #career-page {
