--- a/wp-content/themes/egg/assets/less/_global.less
+++ b/wp-content/themes/egg/assets/less/_global.less
@@ -60,7 +60,8 @@ body{
 		position: absolute;
 		left: 0;
 		right: 0;
-		bottom: -23px;
+		/*bottom: -23px;*/
+		bottom: -69px;
 		
 		h2{
 		  color: #664400;
@@ -79,13 +80,17 @@ body{
 	}
 }
 
+.navbar-toggle{
+	margin-top: 15px;
+}
+
 
 #news-page .container, 
 #collection-content-page, 
 #services-page .container,
 #career-page .container,
 #contact-page .container,
-#default-page .container {  padding: 70px 15px;}
+#default-page .container {  padding: 90px 15px;}
 
 .zh-hant,.zh-hans{
 	.page-head-container .page-title h2{
@@ -104,6 +109,7 @@ body{
 @media (min-width: @screen-sm-min) {
 .page-head-container{
 	.page-title{
+		bottom: -23px;
 		h2{padding: 10px 80px;}
 		}
 	.no-featured-img {
