--- a/wp-content/themes/egg/assets/css/main.css
+++ b/wp-content/themes/egg/assets/css/main.css
@@ -7052,12 +7052,24 @@ figure.alignnone {
   text-align: center;
   left: 0;
   right: 0;
-  top: -67px;
+  top: -27px;
+  position: relative;
+  /*.find-store-arrow{
+			position: absolute;
+			  top: 20px;
+			  padding-left: 5px;
+		}*/
 }
 .home-find-store .section-title .find-store-btn {
   border: 1px solid #664400;
   padding: 5px;
-  display: inline-block;
+  /*display: inline-block;*/
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  margin-left: -150px;
+  margin-top: -43px;
 }
 .home-find-store .section-title .find-store-btn h2 {
   color: #000;
@@ -7069,21 +7081,19 @@ figure.alignnone {
   margin-bottom: 0;
   display: inline-block;
   font-size: 20px;
+  width: 100%;
+  background-color: #fff;
 }
 .home-find-store .section-title .find-store-btn h2 a {
   padding: 25px 11px;
   color: #000;
   display: inline-block;
+  width: 100%;
 }
 .home-find-store .section-title .find-store-btn h2 a:hover {
   text-decoration: none;
   background-color: #998761;
   color: #fff;
-}
-.home-find-store .section-title .find-store-arrow {
-  position: absolute;
-  top: 20px;
-  padding-left: 5px;
 }
 .zh-hant .home-collections .view-all-btn a,
 .zh-hans .home-collections .view-all-btn a,
@@ -7127,18 +7137,22 @@ figure.alignnone {
   .home-news .news-slider {
     height: 290px;
   }
+  .home-find-store .section-title {
+    /*.find-store-arrow{
+			  top: 23px;
+			  padding-left: 16px;
+		}*/
+  }
   .home-find-store .section-title .find-store-btn {
-    width: initial;
+    width: 450px;
+    margin-left: -225px;
+    margin-top: -50px;
   }
   .home-find-store .section-title .find-store-btn h2 {
-    font-size: 30px;
+    font-size: 24px;
   }
   .home-find-store .section-title .find-store-btn h2 a {
-    padding: 25px 60px;
-  }
-  .home-find-store .section-title .find-store-arrow {
-    top: 23px;
-    padding-left: 16px;
+    padding: 20px 30px;
   }
 }
 @media (min-width: 992px) {
