--- a/wp-content/themes/egg/assets/less/main.less
+++ b/wp-content/themes/egg/assets/less/main.less
@@ -23,10 +23,12 @@
 @import "layouts/pages/_services";   // Services page styling
 @import "layouts/pages/_contact";    // Contact us page styling 
 @import "layouts/pages/_careers";    // Careers page styling 
-@import "layouts/pages/_stores";     // Our stores page styling 
+@import "layouts/pages/_stores";     // Our stores page styling
 
 // header+footer styles
 @import "navmenu.less";
+
+@import "layouts/pages/_eggstar";     // eGG* page styling  
 
 //Owl Carousel plugin
 @import "components/slick";
