--- a/wp-content/themes/egg/assets/less/layouts/pages/_product.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_product.less
@@ -4,7 +4,7 @@
 //===============================================================================
 //===============================================================================
 
-.single-product{
+.single-product,.single-eggstar_product{
 	.main{margin-top: 0px;} 
 	.navbar-default .nav-container li.menu-collections a{
 		color: #f8b03a!important;
@@ -211,7 +211,7 @@
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-sm-min) {
-.single-product{
+.single-product,.single-eggstar_product{
 	.main{margin-top: 150px;}
 }
 
